completo (sem os desafios)

--- a/Treino_aplicacao_web/Treino_aplicacao_web.csproj
+++ b/Treino_aplicacao_web/Treino_aplicacao_web.csproj
@@ -259,6 +259,10 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Empresa\Criar.cshtml" />
+    <Content Include="Views\Empresa\Index.cshtml" />
+    <Content Include="Views\Empresa\Deletar.cshtml" />
+    <Content Include="Views\Empresa\Detalhes.cshtml" />
+    <Content Include="Views\Empresa\Editar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
